[gd_scene load_steps=25 format=2]

[ext_resource path="res://images/Menu Draft (1).jpg" type="Texture" id=1]
[ext_resource path="res://buttons/Exit Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/Help Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://buttons/Setting Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://buttons/Play Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/boorsok.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://enemy/walking/skeleton-walking_7.png" type="Texture" id=8]
[ext_resource path="res://enemy/walking/skeleton-walking_4.png" type="Texture" id=9]
[ext_resource path="res://enemy/walking/skeleton-walking_0.png" type="Texture" id=10]
[ext_resource path="res://Player/For Chatacter/Run/8.png" type="Texture" id=11]
[ext_resource path="res://Player/For Chatacter/Run/7.png" type="Texture" id=12]
[ext_resource path="res://Player/For Chatacter/Run/5.png" type="Texture" id=13]
[ext_resource path="res://girl/candy-girl-game-sprites__2.png" type="Texture" id=14]
[ext_resource path="res://girl/candy-girl-game-sprites__5.png" type="Texture" id=15]
[ext_resource path="res://girl/candy-girl-game-sprites__4.png" type="Texture" id=16]
[ext_resource path="res://girl/candy-girl-game-sprites__3_.png" type="Texture" id=17]
[ext_resource path="res://scripts/main menu.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.5, 58.625 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33.5, 33.5 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 35.5, 56.75 )

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 6 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 263.0
margin_bottom = 125.0
script = ExtResource( 18 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_bottom = 0.028
margin_left = 2.0
margin_top = 2.0
margin_right = 1282.0
margin_bottom = 701.84
texture = ExtResource( 1 )

[node name="player" type="KinematicBody2D" parent="TextureRect"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextureRect/player"]
position = Vector2( 186, 300.25 )
scale = Vector2( 1.025, 1.14486 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/player"]
position = Vector2( 184.5, 297.375 )
shape = SubResource( 3 )

[node name="enemy" type="KinematicBody2D" parent="TextureRect"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextureRect/enemy"]
position = Vector2( 866, 141.188 )
scale = Vector2( 0.131116, 0.14677 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/enemy"]
position = Vector2( 866.5, 140.5 )
shape = SubResource( 5 )

[node name="girl" type="KinematicBody2D" parent="TextureRect"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextureRect/girl"]
position = Vector2( 1104, 295 )
scale = Vector2( 0.483232, 0.49 )
frames = SubResource( 6 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/girl"]
position = Vector2( 1104.5, 294.75 )
shape = SubResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 340.0
margin_top = 343.0
margin_right = 620.0
margin_bottom = 574.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 280.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Play Button" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 280.0

[node name="Exit Button" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 110.0
margin_right = 280.0
margin_bottom = 216.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 666.0
margin_top = 341.0
margin_right = 944.0
margin_bottom = 578.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_right = 278.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Setting Button" parent="HBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 278.0

[node name="Story Button" parent="HBoxContainer2/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 110.0
margin_right = 278.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="."]
margin_left = 993.0
margin_top = 630.0
margin_right = 1195.0
margin_bottom = 693.0
custom_fonts/font = SubResource( 1 )
text = "Version 1.0.0"
align = 1
valign = 1

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Setting Button" to="." method="_on_Setting_Button_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Story Button" to="." method="_on_Story_Button_pressed"]
